--- a/index.html
+++ b/index.html
@@ -90,10 +90,25 @@
                     <h1>Web <span>Development</span> <br>without limits </h1>
                     <p>
                         Hi this is samir pordan. I am from Brahmanbaria. I am studing at Kazi Mohammad Shafiqul islam College and university. I alawys love to do somthing new. I love to coding that's why i am on this way. I wanna be a programmer! Hi this is samir pordan. I am from Brahmanbaria. I am studing at Kazi Mohammad Shafiqul islam College and university. I alawys love to do somthing new. I love to coding that's why i am on this way. I wanna be a programmer! Hi this is samir pordan. I am from Brahmanbaria. I am studing at Kazi Mohammad Shafiqul islam College and university. I alawys love to do somthing new. I love to coding that's why i am on this way. I wanna be a programmer!
-                    </p>
+                    </p> <br>
                     <a class="know" target="_blank" href="https://facebook.com/">Read The Docomentation</a>
                 </div>
         </section> <br> <br> <br>
+
+                             <!--Section 4-->
+         <section>
+
+            <div class="sec4t">
+                <h1>Know Our <span>Global</span> <br> Community </h1>
+                <p>
+                    Hi this is samir pordan. I am from Brahmanbaria. I am studing at Kazi Mohammad Shafiqul islam College and university. I alawys love to do somthing new. I love to coding that's why i am on this way. I wanna be a programmer! Hi this is samir pordan. I am from Brahmanbaria. I am studing at Kazi Mohammad Shafiqul islam College and university. I alawys love to do somthing new. I love to coding that's why i am on this way. I wanna be a programmer! Hi this is samir pordan. I am from Brahmanbaria. I am studing at Kazi Mohammad Shafiqul islam College and university. I alawys love to do somthing new. I love to coding that's why i am on this way. I wanna be a programmer!
+                </p>
+            </div>
+                <div class="pro-pic">
+                    <img src="pictures/project.png" alt="">
+                </div>
+            
+         </section>                    
 
 
 </body>
